# PAMC-GPU

./: CITATION.cff  LICENSE  README.md  UNITS.md  conftest.py  install_jax.sh  pyproject.toml  pytest.ini  requirements.txt  run_examples_gpu.sh
data/: 1HRC.itp  1HRC.top  1MBN.top  1PGB.itp  1PGB.top  1UBQ.top  1ZNI.top  2LYZ_prot.top  4CHA.top  4CHA_Protein_chain_A.itp  4CHA_Protein_chain_A_pr.itp  4CHA_Protein_chain_B.itp  4CHA_Protein_chain_B_pr.itp  4CHA_Protein_chain_C.itp  4CHA_Protein_chain_C_pr.itp  4F5S.top  5CHA.itp  5CHA.top  7RSA.top  fourier_modes_rutile.json  posre.itp  posre_Protein_chain_A.itp  posre_Protein_chain_B.itp  posre_Protein_chain_C.itp  topol_Protein_chain_A.itp  topol_Protein_chain_B.itp  topol_Protein_chain_C.itp
src/ptmc/: __init__.py  config.py  log.py  run.py
src/ptmc/analysis/: __init__.py  adsorption.py  clustering.py  free_energy.py  heatmap.py  orientation.py
src/ptmc/benchmarks/: __init__.py  _energy.py  lysozyme.py  protein_g_b1.py
src/ptmc/energy/: __init__.py  agarose.py  fourier_energy.py  grid_build.py  grid_build_jax.py  (+2 more)
tests/: conftest.py  test_adsorption.py  test_analysis.py  test_benchmarks.py  test_bonded.py  test_chi_kinematics.py  test_chi_measure.py  test_chi_topology.py  test_config.py  test_energy_grid.py  test_energy_reference.py  test_flexible_1ubq.py  test_flexible_checkpoint.py  test_flexible_mc.py  test_flexible_nan_audit.py  test_flexible_run.py  test_intra_nb.py  test_io.py  test_lysozyme_rutile.py  test_mc_metropolis.py  test_mc_moves.py  test_model.py  test_run.py  test_sampler.py  test_surface.py
(+33 files in other folders)
