[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptmc-gpu"
version = "0.0.0"
description = "GPU-accelerated Parallel-Tempering / Population-Annealing Monte Carlo for protein adsorption-orientation prediction."
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "parmed>=4.0",
    # Required by the `ptmc` CLI default output format (parquet).
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Trajectory I/O (stage 7). Kept optional so the numerical core installs
# cleanly even without this heavier dep.
traj = ["MDAnalysis>=2.4"]
# Benchmark heatmaps (stage 8) plotting.
analysis = ["matplotlib>=3.10"]
# Full development + test stack.
dev = ["pytest>=7.0", "pytest-cov>=4.0", "MDAnalysis>=2.4", "matplotlib>=3.10"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ptmc = "ptmc.run:main"
